--- a/app/static/styles/flex.css
+++ b/app/static/styles/flex.css
@@ -9,6 +9,11 @@
     width: 100%;
 }
 
+.flex-row-small {
+    display: flex;
+    flex-direction: row;
+}
+
 .flex-row-start {
     display: flex;
     flex-direction: row;
