--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                 </form>
-                <section class="domains-list">
+                <section class="list">
                     <h2>Your domains:</h2>
                     <div>
                         {% for domain in domains %}
