--- a/app/templates/common/navbar.html
+++ b/app/templates/common/navbar.html
@@ -1,8 +1,8 @@
-  
 <nav>
-    <a href="/"><h4>Visit-TrackIT</h4></a>
-    <div class="flex-row-small align-center">
-        <a class="btn btn-primary link-btn m-r-1" href="/login">Login</a>
-        <a class="btn btn-primary link-btn" href="/signup">Signup</a>
-    </div>
+  <a href="/"><h4>Visit-TrackIT</h4></a>
+  <div class="flex-row-small align-center">
+    <h2>{{user.email}}</h2>
+    <a class="btn btn-primary link-btn m-r-1" href="/login">Login</a>
+    <a class="btn btn-primary link-btn" href="/signup">Signup</a>
+  </div>
 </nav>
