--- a/app/templates/common/navbar.html
+++ b/app/templates/common/navbar.html
@@ -2,7 +2,7 @@
 <nav>
     <a href="/"><h4>Visit-TrackIT</h4></a>
     <div class="flex-row-small align-center">
-        <a class="btn btn-primary link-btn m-r-1" href="/login">Login</a>
-        <a class="btn btn-primary link-btn" href="/signup">Signup</a>
+        <a class="btn btn-primary m-r-1" href="/login">Login</a>
+        <a class="btn btn-primary" href="/signup">Signup</a>
     </div>
 </nav>
