--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -14,11 +14,12 @@ html, body {
 }
 
 header {
-    margin-top: 6rem;
+    padding-top: 6rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .card {
@@ -96,6 +97,22 @@ nav a:hover {
     margin-top: 4rem;
 }
 
+.central {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.central-inner {
+    width: 30rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
+    align-items: center;
+}
+
 .central-form-inner {
     width: 30rem;
     display: flex;
@@ -107,6 +124,10 @@ nav a:hover {
 .central-form input {
     width: 100%;
     margin-bottom: 1rem;
+}
+
+.download-btn {
+    margin-bottom: 2rem;
 }
 
 .list {
@@ -123,6 +144,16 @@ nav a:hover {
     cursor: pointer;
 }
 
+.home-page-header {
+    padding-bottom: 3rem;
+    background-image: url("/static/images/lightspeed.jpg");
+    background-size: cover;
+    background-position: center;
+    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.4);
+    color: white;
+    width: 100%;
+}
+
 .link-danger {
     color: var(--danger);
 }
@@ -133,4 +164,8 @@ nav a:hover {
 
 .m-r-1 {
     margin-right: 1rem;
+}
+
+.no-visits-img {
+    margin: 2rem;
 }
