--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -40,15 +40,17 @@
                 class="form-control"
                 placeholder="Username"
                 name="username"
+                type="text"
               />
               <input
                 class="form-control"
                 placeholder="Password"
                 name="password"
+                type="password"
               />
               <div class="flex-row end">
                 <button class="btn btn-primary say-button" type="submit">
-                  Login!
+                  Log in!
                 </button>
               </div>
             </div>
