--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -56,7 +56,7 @@
                         </div>
                     {% endif %}
                 </header>
-                {% if requets.user.username and domains|length %}
+                {% if request.user.username and domains|length %}
                     <section class="list">
                         <h2>Your domains:</h2>
                         <div>
