--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -5,11 +5,17 @@
     <head>
         <!-- Meta. -->
         <meta charset="utf-8" />
-        <meta name="keywords" content="Visit TrackIT">
+        <meta name="keywords" content="Visit-TrackIT, Visit, Track, QRCode">
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
+        <meta property="og:url" content="https://visit-trackit.herokuapp.com/" />
+        <meta property="og:type" content="article" />
+        <meta property="og:title" content="Visit-TrackIT, monitor traffic to your sites using QR codes." />
+        <meta property="og:description" content="Need to run an ad campaign using a QRCode? Want to see how many site visits that code accumulates? Look no further!" />
+        <meta property="og:image" content="https://visit-trackit.herokuapp.com/static/images/lightspeed.jpg" />
+
         <!-- Stylesheets. -->
-        <title>Visit TrackIT see how many visits your site is getting.</title>
+        <title>Visit-TrackIT, see how many visits your site is getting.</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet"  href="{%  static  'styles/variables.css'  %}">
