--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,7 +1,7 @@
   
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
     <head>
         <!-- Meta. -->
         <meta charset="utf-8" />
